Adicionando plugin para build no Heroku